tests/negative/Termination/DefaultArguments.juvix
module DefaultArguments;

type T := t;

g : T := f;

f {a : T := g} : T := a;

main : T := f;
